--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,8 @@
 
 /* Used this css to change the default action of dropdown menu from click to hover */
+body {
+    padding-top: 100px;
+}
 .dropdown:hover .dropdown-menu {
     display: block;
     background-color: #F8F9FA;
@@ -10,26 +13,28 @@
 }
 .navbar {
     padding-top: 28px;
-    height: 60px;
 }
 .messageTab {
     background-color:#1d1d1f;
     font-size: large;
-    padding: 16px 0;
     color: #f5f5f7;
+    height: 60px;
+    display: grid;
+    align-items: center;
 }
 .messageTab a {
     text-decoration: none;
 }
 
-***************************************************
+/* *************************************************** */
 
-/* .bannerImage {
-    background-image: url(/images/small-video.mp4);
-    background-repeat: no-repeat;  
+/* .vision-pro-wrapper {
+   background-position: 50% 30%;
+   height: 100%;
+   width: 100%;
 } */
 
-*****************************************************
+/* ***************************************************** */
 /* Footer Styling */
 
 .footer-wrapper {
