--- a/css/regsitration.css
+++ b/css/regsitration.css
@@ -2,12 +2,17 @@
 /* The navigation bar custome css goes here */
 .navbar {
     background-color: #454545;
+    margin-bottom: 50px;
 }
 .navbar a {
     color: rgb(206, 205, 205);
 }
 
 /* The sub-header custom css goes here */
+
+.regSubHeader {
+    margin-top: 40px;
+}
 
 .regSubHeader a{
 text-decoration: none;
