--- a/css/site.css
+++ b/css/site.css
@@ -1,8 +1,3 @@
-
-/* Used this css to change the default action of dropdown menu from click to hover */
-/* body { */
-    /* padding-top: 100px; */
-/* } */
 .navBg {
   background-color: white;
   opacity: 0.8;
@@ -14,14 +9,22 @@
   color: white;
 }
 
+.dropdown-menu .dropdowns {
+  display: flex;
+  /* justify-content:center; */
+  align-items: flex-start;
+  margin-left: 10%;
+}
+
+
 .dropdown:hover .dropdown-menu {
     display: block;
     background-color: #000000;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
+    width: 100% !important;
+    position: fixed;
+    left: 0;
+    width: 100vw;
+    z-index: 1050;
 }
 /* Removed the dropdown button with this css */
 .dropdown-toggle::after {
@@ -95,6 +98,190 @@
     font-size: small;
   }
 }
+
+/* ********************************************************* */
+/* Main Highlight */
+.main-highlight-wrapper {
+  background: #fafafa;
+  text-align: center;
+  padding: 25px 0;
+}
+.links-wrapper ul {
+  list-style: none;
+}
+.model {
+  font-size: .85em;
+}
+.product-title {
+  font-weight: 700;
+  font-size: 56px;
+}
+.brief-description {
+  font-size: 2em;
+}
+.links-wrapper {
+  padding: 15px 0;
+}
+.links-wrapper ul li {
+  display: inline-block;
+  padding-right: 20px;
+}
+.links-wrapper ul li a {
+  color: #06c;
+  text-decoration: none;
+}
+.links-wrapper ul li a:hover {
+  color: #000;
+}
+.links-wrapper ul li a:after {
+  font-family: "FontAwesome";
+  font-weight: 900;
+  content: "\f105";
+  padding-left: 10px;
+}
+
+
+/* Second Highlight Section */
+.second-hightlight-wrapper {
+  background-image: url("../images/home/iphone11-pro-bg.jpg");
+  height: 580px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  padding: 65px 20px;
+  color: #fff;
+}
+.title-wraper {
+  font-weight: 600;
+  font-size: 56px;  
+}
+.description-wrapper {
+  font-size: 26px;
+  padding: 10px 0;
+}
+.price-wrapper {
+  color: #86868b; 
+  font-size: 0.85em;
+}
+
+
+/* Third Highlight Section */
+.third-highlight-wrapper {
+  background-image: url("../images/home/iphone11-bg.jpg");
+  height: 580px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  padding: 65px 20px;
+}
+
+
+/*Fourth Highlight Section */
+.fourth-heghlight-wrapper {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  background: #fff;
+}
+.left-side-wrapper {
+  height: 580px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  width: 48.5%;
+  margin: 1% 0.5% 0% 1%; 
+  padding-top: 54px;
+}
+.fourth-heghlight-wrapper .left-side-wrapper {
+  background-image:  url("../images/home/watch-series-5.jpg"); 
+}
+.right-side-wrapper {
+  height: 580px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;  
+  width: 48.5%;
+  margin: 1% 1% 0% 0.5%; 
+  padding-top: 54px;
+}
+.fourth-heghlight-wrapper .right-side-wrapper {
+  background-image:  url("../images/home/apple-card.jpg"); 
+}
+.description-wraper {
+  max-width: 430px;
+  margin: 0 auto;
+  padding: 10px; 
+}
+
+
+/*Fivth Highlight Section */
+.fifth-heghlight-wrapper {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  background: #fff;
+}
+.fifth-heghlight-wrapper .left-side-wrapper {
+  background-image:  url("../images/home/apple-tv-background.jpg"); 
+}
+.fifth-heghlight-wrapper .right-side-wrapper {
+  background-image:  url("../images/home/air-pods.jpg"); 
+  color: #fff; 
+  background-size: initial;
+  background-color: #000;
+  background-position: bottom;
+}
+.logo-wrapper {
+  font-size: 40px;
+  font-weight: bold;
+}
+.tvshow-logo-wraper {
+  padding: 180px 0 200px;
+}
+.watch-more-wrapper a {
+  text-decoration: none;
+  font-size: 0.85em;
+}
+.watch-more-wrapper a:after {
+  font-family: "FontAwesome";
+  font-weight: 900;
+  content: "\f144";
+  padding-left: 15px;
+}
+
+
+
+/*Sixth Highlight Section */
+.sixth-heghlight-wrapper {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  background: #fff;
+}
+.sixth-heghlight-wrapper .left-side-wrapper {
+  background-image:  url("../images/home/macbook-pro.jpg"); 
+  background-size: initial;
+  background-color: #fafafa;
+  background-position: bottom;
+}
+.sixth-heghlight-wrapper .right-side-wrapper {
+  background-image:  url("../images/home/new-ipad.jpg"); 
+}
+.product-title-small {
+  font-weight: 700;
+  font-size: 45px;
+}
+
+
+
+/* ********************************************************* */
+
+
+
 
 /* ***************************************************** */
 /* Footer Styling */
